--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -46,6 +46,7 @@ body {
     font-weight: 300;
 }
 
+/* Vertical-dashed-line */
 .vdashl {
     position: relative;
     border-left: 2px dashed #F87C58;
@@ -66,6 +67,7 @@ body {
 }
 
 .navbar-default .navbar-nav>.active>a, ul {
+    padding-bottom: 20px !important;
     float: right !important;
     color: #F87C58 !important;
     background-color: #333647;
@@ -98,7 +100,7 @@ body {
 }
 
 .vert-cent {
-    padding-top: 3%;
+    padding-top: 2%;
     padding-bottom: 100px;
 }
 
@@ -150,150 +152,6 @@ body {
     outline: 3px dashed white;
     outline-offset: 10px !important;
     background: #282A39 !important;
-}
-
-@media only screen and (max-width:1199px) {
-
-    .inline-input{
-        width: 245px !important;
-    }
-    select{
-        width: 45% !important;
-    }
-    .textareabg{
-        width: 95% !important;
-    }
-}
-
-@media only screen and (max-width: 992px) {
-    html, body {
-        font-size: 16px !important;
-    }
-
-    .nav-mod {
-        padding: 5px;
-    }
-
-    .navbar-header img {
-        width: 174px !important;
-    }
-
-    .navbar-toggle {
-        margin-top: 18px;
-    }
-
-    .navbar-default .navbar-nav>.active>a, ul {
-        float: left !important;
-    }
-
-    .sec1bg, .sec2bg, .sec4bg, .sec8bg {
-        padding: 50px 0 !important;
-    }
-
-    .sec3bg, .sec5bg, .sec6bg, .sec7bg {
-        padding-bottom: 50px !important;
-    }
-
-    .sec1bg .row {
-        text-align: center;
-    }
-
-    .mgl-1 {
-        margin-left: 0 !important;
-    }
-
-    .mgl-3 {
-        margin-left: 5px !important;
-    }
-
-    .pdl-5 {
-        padding-left: 8px !important;
-    }
-
-    img {
-        width: 100% !important;
-        margin-bottom: 15px;
-    }
-
-    .sec2bg .btn-default {
-        float: right;
-        padding-bottom: 18px;
-    }
-
-    .corner-cal {
-        bottom: 35px !important;
-        left: 100px !important;
-    }
-
-    .white-strip {
-        bottom: 85px !important;
-        left: 122px !important;
-    }
-
-    .white-strip2 {
-        bottom: 110px !important;
-        left: 155px !important;
-    }
-
-    .white-strip3 {
-        bottom: 135px !important;
-        left: 185px !important;
-    }
-
-    .white-strip4 {
-        bottom: 160px !important;
-        left: 215px !important;
-    }
-
-    .blacksqr {
-        margin-bottom: 25px;
-    }
-
-    .sec6img {
-        outline: 6px solid #F87C58;
-        outline-offset: -50px !important;
-    }
-
-    .sec6bg .outer-row img {
-        width: auto !important;
-        margin-bottom: 0 !important;
-    }
-
-    .sec7bg .row img {
-        margin-bottom: 0 !important;
-    }
-
-    .txt-sm-cent {
-        text-align: center;
-
-    }
-
-    .item-sm-cent {
-        display: flex;
-        justify-content: center;
-    }
-
-    .inline-input {
-        display: block !important;
-        width: 100% !important;
-        background-color: #333647;
-        border-color: #333333;
-        color: white;
-        padding: 24px 12px;
-        margin-bottom: 25px !important;
-    }
-
-    select {
-        width: 100% !important;
-    }
-
-    .textareabg {
-        width: 100% !important;
-    }
-
-    .sec8bg .btn-warning {
-        width: 100% !important;
-    }
 }
 
 /* Section 2 Designings */
@@ -409,26 +267,20 @@ body {
     margin-left: 15px;
 }
 
-.arrow-design {
-    position: relative;
-    top: 20px;
-    right: 20px;
-    float: right;
-    width: 20px !important;
-}
-.fa-long-arrow-alt-right{
+.fa-long-arrow-alt-right {
     float: right;
     color: #F87C58;
     margin-top: 5px;
     padding-right: 15px;
-    transform: scale(1.7,1.2);
+    transform: scale(1.7, 1.2);
 }
 
-.changebg:hover, .changebg:hover .fa-long-arrow-alt-right{
+.changebg:hover, .changebg:hover .fa-long-arrow-alt-right {
     background-color: #F87C58;
     color: white !important;
 }
-.changebg:hover .whitebg{
+
+.changebg:hover .whitebg {
     background-color: white !important;
     filter: saturate(100%);
     color: #F87C58;
@@ -478,9 +330,10 @@ body {
     padding-bottom: 100px;
 }
 
-.sec5bg .row .col-md-4 .container {
+.sec5bg .row .col-md-4 .bwcard {
     position: relative;
     width: 100%;
+    padding: 1px;
 }
 
 .sec5bg .row .col-md-4 img {
@@ -493,9 +346,9 @@ body {
 .orangebg-overlay {
     position: absolute;
     transition: .5s ease;
-    width: 92%;
+    width: 100%;
     height: 100%;
-    padding-top: 60px;
+    padding-top: 80px;
     background-color: #F87C58;
     border-radius: 5px;
     color: white;
@@ -507,7 +360,7 @@ body {
     text-align: center;
 }
 
-.sec5bg .row .col-md-4 .container:hover .orangebg-overlay {
+.sec5bg .row .col-md-4 .bwcard:hover .orangebg-overlay {
     opacity: 1;
     filter: opacity(95%);
 }
@@ -605,7 +458,7 @@ body {
     margin-top: 5px !important;
 }
 
-.sec8bg .row .col-md-4 .row .col-md-8 {
+.sec8bg .row .col-sm-4 .row .col-md-8 {
     margin-left: 15px;
 }
 
@@ -629,8 +482,6 @@ body {
 }
 
 .inline-input {
-    display: inline;
-    width: 310px;
     margin-right: 20px;
     background-color: #333647;
     border-color: #333333;
@@ -645,7 +496,7 @@ select {
     outline: 0;
     background: #333647;
     background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-    width: 46%;
+    width: 100%;
     height: 100%;
     color: white;
     cursor: pointer;
@@ -675,7 +526,7 @@ select {
     color: white;
     padding: 10px;
     border-radius: 4px;
-    width: 96%;
+    width: 100%;
     min-height: 75px;
     outline: none;
     resize: none;
@@ -697,6 +548,7 @@ select {
     color: #FFFFFF !important;
 }
 
+/* Section 9 Footer Designings */
 .sec9bg {
     background-color: #11121C !important;
 }
