--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -174,8 +174,8 @@ body {
     background-color: #11121C;
     color: white;
     border-radius: 10px;
-    bottom: 55px;
-    left: -30px;
+    bottom: 55px !important;
+    left: -30px !important;
     padding: 20px;
     width: 150px;
     height: 140px;
@@ -307,7 +307,7 @@ body {
     text-align: center;
     border-radius: 10px;
     border: 1px dashed #707070;
-    padding: 8px;
+    padding: 8px !important;
 }
 
 .blacksqr:hover {
@@ -315,12 +315,12 @@ body {
     color: white;
 }
 
-.blacksqr h2, .orangesqr h2 {
+.blacksqr h2{
     font-size: 32px;
     font-family: 600;
 }
 
-.blacksqr p, .orangesqr p {
+.blacksqr p{
     font-size: 18px;
 }
 
